# Qualcomm-Sep25-Team-Sonare

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
code_samples/: medipipe_image.py  performing_keypoint_extractions_on_electron.txt  running_onxx_models_on_npu.txt  use_whisper_small.txt
models/: README.md
src/: README.md  dummy_file.txt  index.html
src/Video Sampling/: .gitignore  words_to_visual.py
src/Video_Sampling/: filtered_wlasl.json  gloss_to_video.json  words_to_visual.py
src/inference/: inference_basic.py  inference_whisper.py
src/server/: justfile  main.py
src/server/routers/: __init__.py  video.py
src/speech_to_sign/: COMMANDS.md  clean_transcript.py  clean_transcript.txt  finalize_transcript.py  gloss_transcript.py  glossify_transcript.py  index.html  lexicons.json  live_transcript.txt  make_sign_queue.py  record_audio.py  run_all.sh  sign_queue.jsonl  stitch_queue.sh  stream_queue_assets.py  transcribe.sh
src/ui/: __init__.py  audio_recorder.py  capture-video.py  components.py  io_operations.py  logic.py  main.py  package-lock.json  package.json  render-logic.py  ui_components.py  video-capture.py
src/ui/src/main/: main.ts
src/ui/src/renderer/: App.css  App.tsx  CameraCapture.tsx  CameraScreen.tsx  SimpleCameraScreen.tsx  index.ejs
src/ui/src/renderer/services/: GestureClassifier.ts  HandLandmarkerService.ts  PerformanceMonitor.ts  VocabularyService.ts
src/utils/: convert_tgcn_to_onxx.txt  inference_gcn.py  model_onxx_run_for_mistral.txt
working-directory/: App.tsx  README.md
