[project]
name = "qualcomm-sep25-team-sonare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
]
